--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -85,3 +85,16 @@
     display: flex;
     flex-direction: column;
 }
+
+.finalizar-compra{
+    display: flex;
+    flex-direction: column;
+    /* max-width: 300px; */
+    align-items: center;
+
+}
+.finalizar-compra input{
+    margin: 3px;
+    
+
+}
